--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,16 @@ langchain
 PyPDF2
 chromadb
 faiss-cpu
-langchain_google_genai
-langchain-community
+
+python-dotenv
+PyPDF2
+langchain-community==0.3.16
+langchain==0.3.16
+langchain-huggingface==0.1.2
+langchain-text-splitters==0.3.5
+langchain-chroma==0.2.1
+langchain-groq==0.2.3
+streamlit==1.41.1
+faiss-cpu
+base64
+chromadb
