--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 python-dotenv
 PyPDF2
-langchain-community==0.3.16
-langchain==0.3.16
-langchain-huggingface==0.1.2
-langchain-text-splitters==0.3.5
+langchain-community
+langchain
+langchain-huggingface
+langchain-text-splitters
 langchain-chroma==0.2.1
 langchain-groq==0.2.3
 streamlit==1.41.1
