--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
+streamlit
 python-dotenv
 PyPDF2
 langchain-community
 langchain
 langchain-huggingface
 langchain-text-splitters
-langchain-chroma==0.2.1
-langchain-groq==0.2.3
-streamlit==1.41.1
+langchain-chroma
+langchain-groq
 faiss-cpu
-base64
 chromadb
+base64
